Bump quarkus.version from 3.28.4 to 3.29.0 (#321)
* Bump quarkus.version from 3.28.4 to 3.29.0

Bumps `quarkus.version` from 3.28.4 to 3.29.0.

Updates `io.quarkus:quarkus-bom` from 3.28.4 to 3.29.0
- [Release notes](https://github.com/quarkusio/quarkus/releases)
- [Commits](https://github.com/quarkusio/quarkus/compare/3.28.4...3.29.0)

Updates `io.quarkus:quarkus-test-maven` from 3.28.4 to 3.29.0

Updates `io.quarkus:quarkus-enforcer-rules` from 3.28.4 to 3.29.0
- [Release notes](https://github.com/quarkusio/quarkus/releases)
- [Commits](https://github.com/quarkusio/quarkus/compare/3.28.4...3.29.0)

Updates `io.quarkus:quarkus-maven-plugin` from 3.28.4 to 3.29.0

Updates `io.quarkus:quarkus-extension-processor` from 3.28.4 to 3.29.0

Updates `io.quarkus:quarkus-extension-maven-plugin` from 3.28.4 to 3.29.0
- [Release notes](https://github.com/quarkusio/quarkus/releases)
- [Commits](https://github.com/quarkusio/quarkus/compare/3.28.4...3.29.0)

---
updated-dependencies:
- dependency-name: io.quarkus:quarkus-bom
  dependency-version: 3.29.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
- dependency-name: io.quarkus:quarkus-test-maven
  dependency-version: 3.29.0
  dependency-type: direct:development
  update-type: version-update:semver-minor
- dependency-name: io.quarkus:quarkus-enforcer-rules
  dependency-version: 3.29.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
- dependency-name: io.quarkus:quarkus-maven-plugin
  dependency-version: 3.29.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
- dependency-name: io.quarkus:quarkus-extension-processor
  dependency-version: 3.29.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
- dependency-name: io.quarkus:quarkus-extension-maven-plugin
  dependency-version: 3.29.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@g