@@ -16,19 +16,20 @@
  */
 package io.quarkiverse.groovy.hibernate.reactive.panache.deployment;
 
-import java.lang.reflect.Modifier;
-import java.util.Collection;
+import static io.quarkiverse.groovy.hibernate.reactive.panache.deployment.EntityToPersistenceUnitUtil.determineEntityPersistenceUnits;
+
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import jakarta.persistence.Id;
 
 import org.hibernate.reactive.mutiny.Mutiny;
 import org.jboss.jandex.AnnotationInstance;
-import org.jboss.jandex.AnnotationTarget;
 import org.jboss.jandex.ClassInfo;
 import org.jboss.jandex.DotName;
 import org.jboss.jandex.MethodInfo;
@@ -39,31 +40,27 @@ import io.quarkiverse.groovy.hibernate.reactive.panache.PanacheEntity;
 import io.quarkiverse.groovy.hibernate.reactive.panache.PanacheEntityBase;
 import io.quarkiverse.groovy.hibernate.reactive.panache.PanacheRepository;
 import io.quarkiverse.groovy.hibernate.reactive.panache.PanacheRepositoryBase;
-import io.quarkus.arc.deployment.AnnotationsTransformerBuildItem;
+import io.quarkiverse.groovy.hibernate.reactive.panache.runtime.PanacheHibernateReactiveRecorder;
 import io.quarkus.arc.deployment.UnremovableBeanBuildItem;
 import io.quarkus.arc.deployment.ValidationPhaseBuildItem;
-import io.quarkus.arc.processor.Annotations;
-import io.quarkus.arc.processor.AnnotationsTransformer;
+import io.quarkus.arc.deployment.staticmethods.InterceptedStaticMethodsTransformersRegisteredBuildItem;
 import io.quarkus.builder.BuildException;
-import io.quarkus.deployment.Capabilities;
-import io.quarkus.deployment.Capability;
-import io.quarkus.deployment.Feature;
 import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
 import io.quarkus.deployment.annotations.Consume;
-import io.quarkus.deployment.builditem.AdditionalApplicationArchiveMarkerBuildItem;
+import io.quarkus.deployment.annotations.ExecutionTime;
+import io.quarkus.deployment.annotations.Record;
 import io.quarkus.deployment.builditem.BytecodeTransformerBuildItem;
 import io.quarkus.deployment.builditem.CombinedIndexBuildItem;
 import io.quarkus.deployment.builditem.FeatureBuildItem;
 import io.quarkus.deployment.util.JandexUtil;
-import io.quarkus.hibernate.orm.deployment.AdditionalJpaModelBuildItem;
-import io.quarkus.hibernate.reactive.panache.common.WithSession;
-import io.quarkus.hibernate.reactive.panache.common.WithSessionOnDemand;
-import io.quarkus.hibernate.reactive.panache.common.WithTransaction;
+import io.quarkus.hibernate.orm.deployment.JpaModelPersistenceUnitMappingBuildItem;
+import io.quarkus.hibernate.orm.deployment.spi.AdditionalJpaModelBuildItem;
 import io.quarkus.panache.common.deployment.PanacheMethodCustomizer;
 import io.quarkus.panache.common.deployment.PanacheMethodCustomizerBuildItem;
 import io.quarkus.panache.hibernate.common.deployment.HibernateEnhancersRegisteredBuildItem;
 import io.quarkus.panache.hibernate.common.deployment.PanacheJpaEntityOperationsEnhancer;
+import io.smallrye.common.annotation.CheckReturnValue;
 import io.smallrye.mutiny.Multi;
 import io.smallrye.mutiny.Uni;
 
@@ -77,35 +74,31 @@ public final class PanacheHibernateResourceProcessor {
     private static final DotName DOTNAME_REACTIVE_SESSION = DotName.createSimple(Mutiny.Session.class.getName());
 
     private static final DotName DOTNAME_ID = DotName.createSimple(Id.class.getName());
-    protected static final String META_INF_PANACHE_ARCHIVE_MARKER = "META-INF/panache-archive.marker";
 
-    private static final DotName WITH_SESSION_ON_DEMAND = DotName.createSimple(WithSessionOnDemand.class.getName());
-    private static final DotName WITH_SESSION = DotName.createSimple(WithSession.class.getName());
-    private static final DotName WITH_TRANSACTION = DotName.createSimple(WithTransaction.class.getName());
-    private static final DotName UNI = DotName.createSimple(Uni.class.getName());
     private static final DotName DOTNAME_UNI = DotName.createSimple(Uni.class.getName());
     private static final DotName DOTNAME_MULTI = DotName.createSimple(Multi.class.getName());
 
     @BuildStep
     FeatureBuildItem featureBuildItem() {
-        return new FeatureBuildItem(Feature.HIBERNATE_REACTIVE_PANACHE);
+        return new FeatureBuildItem("groovy-hibernate-reactive-panache");
     }
 
     @BuildStep
     AdditionalJpaModelBuildItem produceModel() {
         // only useful for the index resolution: hibernate will register it to be transformed, but BuildMojo
         // only transforms classes from the application jar, so we do our own transforming
-        return new AdditionalJpaModelBuildItem("io.quarkiverse.groovy.hibernate.reactive.panache.PanacheEntity");
+        return new AdditionalJpaModelBuildItem("io.quarkiverse.groovy.hibernate.reactive.panache.PanacheEntity",
+                // Only added to persistence units actually using this class, using Jandex-based discovery,
+                // so we pass empty sets of PUs.
+                // The build items tell the Hibernate extension to process the classes at build time:
+                // add to Jandex index, bytecode enhancement, proxy generation, ...
+                Set.of());
+
     }
 
     @BuildStep
     UnremovableBeanBuildItem ensureBeanLookupAvailable() {
         return UnremovableBeanBuildItem.beanTypes(DOTNAME_REACTIVE_SESSION);
-    }
-
-    @BuildStep
-    AdditionalApplicationArchiveMarkerBuildItem marker() {
-        return new AdditionalApplicationArchiveMarkerBuildItem(META_INF_PANACHE_ARCHIVE_MARKER);
     }
 
     @BuildStep
@@ -121,22 +114,29 @@ public final class PanacheHibernateResourceProcessor {
 
     @BuildStep
     @Consume(HibernateEnhancersRegisteredBuildItem.class)
+    @Consume(InterceptedStaticMethodsTransformersRegisteredBuildItem.class)
     void build(CombinedIndexBuildItem index,
             BuildProducer<BytecodeTransformerBuildItem> transformers,
             List<PanacheEntityClassBuildItem> entityClasses,
-            List<PanacheMethodCustomizerBuildItem> methodCustomizersBuildItems) throws Exception {
+            Optional<JpaModelPersistenceUnitMappingBuildItem> jpaModelPersistenceUnitMapping,
+            List<PanacheMethodCustomizerBuildItem> methodCustomizersBuildItems,
+            BuildProducer<EntityToPersistenceUnitBuildItem> entityToPersistenceUnit) {
 
         List<PanacheMethodCustomizer> methodCustomizers = methodCustomizersBuildItems.stream()
-                .map(bi -> bi.getMethodCustomizer()).collect(Collectors.toList());
+                .map(PanacheMethodCustomizerBuildItem::getMethodCustomizer).toList();
 
         PanacheJpaRepositoryEnhancer daoEnhancer = new PanacheJpaRepositoryEnhancer(index.getIndex());
         Set<String> daoClasses = new HashSet<>();
+        Set<String> panacheEntities = new HashSet<>();
         for (ClassInfo classInfo : index.getIndex().getAllKnownImplementors(DOTNAME_PANACHE_REPOSITORY_BASE)) {
             // Skip PanacheRepository
             if (classInfo.name().equals(DOTNAME_PANACHE_REPOSITORY))
                 continue;
             if (daoEnhancer.skipRepository(classInfo))
                 continue;
+            List<org.jboss.jandex.Type> typeParameters = JandexUtil
+                    .resolveTypeParameters(classInfo.name(), DOTNAME_PANACHE_REPOSITORY_BASE, index.getIndex());
+            panacheEntities.add(typeParameters.get(0).name().toString());
             daoClasses.add(classInfo.name().toString());
         }
         for (ClassInfo classInfo : index.getIndex().getAllKnownImplementors(DOTNAME_PANACHE_REPOSITORY)) {
@@ -151,10 +151,31 @@ public final class PanacheHibernateResourceProcessor {
         PanacheJpaEntityOperationsEnhancer entityOperationsEnhancer = new PanacheJpaEntityOperationsEnhancer(index.getIndex(),
                 methodCustomizers,
                 ReactiveGroovyJpaTypeBundle.BUNDLE);
+
+        Set<String> modelClasses = new HashSet<>();
         for (PanacheEntityClassBuildItem entityClass : entityClasses) {
             String entityClassName = entityClass.get().name().toString();
-            transformers.produce(new BytecodeTransformerBuildItem(true, entityClassName, entityOperationsEnhancer));
+            modelClasses.add(entityClassName);
+            transformers.produce(new BytecodeTransformerBuildItem(entityClassName, entityOperationsEnhancer));
         }
+
+        panacheEntities.addAll(modelClasses);
+
+        determineEntityPersistenceUnits(jpaModelPersistenceUnitMapping, panacheEntities, "Panache")
+                .forEach((e, pu) -> {
+                    entityToPersistenceUnit.produce(new EntityToPersistenceUnitBuildItem(e, pu));
+                });
+    }
+
+    @BuildStep
+    @Record(ExecutionTime.STATIC_INIT)
+    void recordEntityToPersistenceUnit(List<EntityToPersistenceUnitBuildItem> items,
+            PanacheHibernateReactiveRecorder recorder) {
+        Map<String, String> map = new HashMap<>();
+        for (EntityToPersistenceUnitBuildItem item : items) {
+            map.put(item.getEntityClass(), item.getPersistenceUnitName());
+        }
+        recorder.setEntityToPersistenceUnit(map);
     }
 
     @BuildStep
@@ -174,65 +195,8 @@ public final class PanacheHibernateResourceProcessor {
         return null;
     }
 
-    @BuildStep
-    void transformResourceMethods(CombinedIndexBuildItem index, Capabilities capabilities,
-            BuildProducer<AnnotationsTransformerBuildItem> annotationsTransformer) {
-        if (capabilities.isPresent(Capability.RESTEASY_REACTIVE)) {
-            // Custom request method designators are not supported
-            List<DotName> designators = List.of(DotName.createSimple("jakarta.ws.rs.GET"),
-                    DotName.createSimple("jakarta.ws.rs.HEAD"),
-                    DotName.createSimple("jakarta.ws.rs.DELETE"), DotName.createSimple("jakarta.ws.rs.OPTIONS"),
-                    DotName.createSimple("jakarta.ws.rs.PATCH"), DotName.createSimple("jakarta.ws.rs.POST"),
-                    DotName.createSimple("jakarta.ws.rs.PUT"));
-            List<DotName> bindings = List.of(WITH_SESSION, WITH_SESSION_ON_DEMAND, WITH_TRANSACTION);
-
-            // Collect all panache entities
-            Set<DotName> entities = new HashSet<>();
-            for (ClassInfo subclass : index.getIndex().getAllKnownSubclasses(DOTNAME_PANACHE_ENTITY_BASE)) {
-                if (!subclass.name().equals(DOTNAME_PANACHE_ENTITY)) {
-                    entities.add(subclass.name());
-                }
-            }
-            Set<DotName> entityUsers = new HashSet<>();
-            for (DotName entity : entities) {
-                for (ClassInfo user : index.getIndex().getKnownUsers(entity)) {
-                    entityUsers.add(user.name());
-                }
-            }
-
-            annotationsTransformer.produce(new AnnotationsTransformerBuildItem(new AnnotationsTransformer() {
-                @Override
-                public boolean appliesTo(AnnotationTarget.Kind kind) {
-                    return kind == AnnotationTarget.Kind.METHOD;
-                }
-
-                @Override
-                public void transform(TransformationContext context) {
-                    MethodInfo method = context.getTarget().asMethod();
-                    Collection<AnnotationInstance> annotations = context.getAnnotations();
-                    if (method.isSynthetic()
-                            || Modifier.isStatic(method.flags())
-                            || method.declaringClass().isInterface()
-                            || !method.returnType().name().equals(UNI)
-                            || !entityUsers.contains(method.declaringClass().name())
-                            || !Annotations.containsAny(annotations, designators)
-                            || Annotations.containsAny(annotations, bindings)) {
-                        return;
-                    }
-                    // Add @WithSessionOnDemand to a method that
-                    // - is not static
-                    // - is not synthetic
-                    // - returns Uni
-                    // - is declared in a class that uses a panache entity
-                    // - is annotated with @GET, @POST, @PUT, @DELETE ,@PATCH ,@HEAD or @OPTIONS
-                    // - is not annotated with @ReactiveTransactional, @WithSession, @WithSessionOnDemand, or @WithTransaction
-                    context.transform().add(WITH_SESSION_ON_DEMAND).done();
-                }
-            }));
-        }
-    }
-
-    private static final String CHECK_RETURN_VALUE_BINARY_NAME = "io/smallrye/common/annotation/CheckReturnValue";
+    private static final DotName DOTNAME_CHECK_RETURN_VALUE_CLASS = DotName.createSimple(CheckReturnValue.class);
+    private static final String CHECK_RETURN_VALUE_BINARY_NAME = CheckReturnValue.class.getName().replace('.', '/');
     private static final String CHECK_RETURN_VALUE_SIGNATURE = "L" + CHECK_RETURN_VALUE_BINARY_NAME + ";";
 
     @BuildStep
@@ -241,7 +205,8 @@ public final class PanacheHibernateResourceProcessor {
             @Override
             public void customize(Type entityClassSignature, MethodInfo method, MethodVisitor mv) {
                 DotName returnType = method.returnType().name();
-                if (returnType.equals(DOTNAME_UNI) || returnType.equals(DOTNAME_MULTI)) {
+                if ((returnType.equals(DOTNAME_UNI) || returnType.equals(DOTNAME_MULTI))
+                        && !method.hasDeclaredAnnotation(DOTNAME_CHECK_RETURN_VALUE_CLASS)) {
                     mv.visitAnnotation(CHECK_RETURN_VALUE_SIGNATURE, true);
                 }
             }
